--- a/search_kakao.html
+++ b/search_kakao.html
@@ -61,6 +61,8 @@
             <div id="pagination"></div>
         </div>
     </div>
+    <script charset="UTF-8" src="https://t1.daumcdn.net/mapjsapi/js/main/4.4.14/kakao.js"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=83039581791f5dd176fbf0d84a3e2dc8"></script>
     <script>
     // 마커를 담을 배열입니다
     var markers = [];
