--- a/search_kakao.html
+++ b/search_kakao.html
@@ -61,7 +61,7 @@
     </div>
 </div>
 
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey='83039581791f5dd176fbf0d84a3e2dc8'&libraries=services"></script>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=83039581791f5dd176fbf0d84a3e2dc8&libraries=services"></script>
 <script>
 // 마커를 담을 배열입니다
 var markers = [];
